feat: handle endpoint to get user profile data and its swagger documentation
