# controllers/users.go
@@ -35,7 +35,7 @@ func UpdateUser(c *gin.Context) {
 	var request dto.UpdateUserRequest
 	c.ShouldBindJSON(&request)
 
-	updatedUser, err := models.UpdateUserProfile(int(userId.(float64)), request)
+	updatedUser, err := models.UpdateUserData(int(userId.(float64)), request)
 	if err != nil {
 		if err.Error() == "email already used by another user" || err.Error() == "phone number already used by another user" || err.Error() == "password and confirm password do not match" {
 			c.JSON(http.StatusBadRequest, utils.Response{
@@ -57,5 +57,42 @@ func UpdateUser(c *gin.Context) {
 		Success: true,
 		Message: "User data updated successfully",
 		Result:  updatedUser,
+	})
+}
+
+// GetProfileUser retrieves user profile data
+// @Summary Get profile user
+// @Description Retrieve user profile data
+// @Tags User
+// @Accept json
+// @Produce json
+// @Security BearerAuth
+// @Success 200 {object} utils.Response{result=[]dto.UpdateUserResult} "Successful response with user profile data"
+// @Failure 401 {object} utils.Response "Unauthorized access"
+// @Failure 500 {object} utils.Response "Internal server error"
+// @Router /user [get]
+func GetProfileUser(c *gin.Context) {
+	userId, _ := c.Get("userId")
+	role, _ := c.Get("role")
+	if role != "user" {
+		c.JSON(http.StatusUnauthorized, utils.Response{
+			Success: false,
+			Message: "Unauthorized",
+		})
+		return
+	}
+	user, err := models.GetProfileUser(int(userId.(float64)))
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, utils.Response{
+			Success: false,
+			Message: "Internal Server Error",
+			Errors:  err.Error(),
+		})
+		return
+	}
+	c.JSON(http.StatusOK, utils.Response{
+		Success: true,
+		Message: "Success to get user's profile",
+		Result:  user,
 	})
 }
